src_old/objects/PostalCode__c.object
<CustomObject>
    <description>Postal Code stores a global list of Postal Codes with Country and Geolocation information that is referenced from multiple objects. Postal Code is related to Location, Job, and Project Location.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>Geo Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Timezoneoffset__c</fullName>
        <label>Time Zone Offset</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GeoLocation__Latitude__s</columns>
        <columns>GeoLocation__Longitude__s</columns>
        <columns>DST__c</columns>
        <columns>Timezoneoffset__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>